@@ -128,6 +128,10 @@ C-API
 Library
 -------
 
+- Issue #5117: Case normalization was needed on ntpath.relpath(). And
+  fixed root directory issue on posixpath.relpath(). (Ported working fixes
+  from ntpath)
+
 - Issue #10041: The signature of optional arguments in socket.makefile()
   didn't match that of io.open(), and they also didn't get forwarded
   properly to TextIOWrapper in text mode.  Patch by Kai Zhu.
